# signal0ne

./: .env.template  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.test.yaml  docker-compose.test.yaml.bak  docker-compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  integration-request.md
backend/: .air.toml  .default.env  .env.template  Dockerfile  Dockerfile.dev  Dockerfile.test  go.mod  go.sum  main.go
backend/api/routers/: main.router.go
backend/cmd/config/: config.go
backend/internal/controllers/: alert.controller.go  alerts.controller.go  incident.controller.go  integration.controller.go  main.controller.go  namespace.controller.go  rbac.controller.go  user.auth.controller.go  workflow.controller.go
backend/scripts/: healthcheck.sh  start.sh
backend/scripts/slackapp/: .dockerignore  .env.template  Dockerfile  app.py  pyproject.toml
backend/scripts/slackapp/handlers/: details.py  helpers.py  incident.py
backend/scripts/slackapp/routes/: add_users_to_channel.py  create_channel.py  post_message.py
examples/: CICDReleasePipelineFailure.yaml  ErrorRateByService.yaml  ErrorRateByServiceFormalIncident.yaml  ErrorRateByService_2.yaml  README.md  _CICDReleasePipelineFailure.yaml  _ErrorRateByServiceFormalIncident.yaml  relevant_logs.yaml  testing.yaml
frontend/: .dockerignore  .env  .env.template  .prettierrc  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.scss  App.tsx  index.css  main.tsx  vite-env.d.ts
infra/: ngrok.yaml
(+207 files in other folders)
